sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: illegal start of simple expression
    while (){
           ^AlgBubbleSort1:13: error: ')' expected but '}' found.
} 
^